<resources>
    <string name="app_name">FindPet</string>

    <string name="activity_user_registration_personal_data_label">Dados pessoais</string>
    <string name="activity_user_registration_address_data_label">Endereço</string>

    <string name="user">Usuário</string>
    <string name="user_name">Nome</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Telefone</string>
    <string name="user_password">Senha</string>
    <string name="user_password_confirm">Confirme sua senha</string>
    <string name="user_sign_in">Entrar</string>
    <string name="user_forget_password">Esqueci minha senha</string>
    <string name="user_social_login">Ou acesse através de suas redes sociais:</string>
    <string name="user_register">Cadastre-se</string>
    <string name="user_my_animals">Meus PETs</string>

    <string name="user_address_street">Rua</string>
    <string name="user_address_number">Número</string>
    <string name="user_address_neighborhood">Bairro</string>
    <string name="user_address_city">Cidade</string>
    <string name="user_address_state">UF</string>
    <string name="user_address_country">País</string>

    <string name="register">Cadastrar</string>

    <string name="animal_register_your_animal">Cadastre seu PET</string>
    <string name="animal_register_dog_label">Doguinho</string>
    <string name="animal_register_cat_label">Gatinho</string>

    <string name="animal_register_breed">Raça</string>
    <string name="animal_register_description">Descrição</string>

    <string name="activity_animal_register_animal">Cadastrar depois</string>
    <string name="activity_animal_register_send_photo">Enviar foto</string>

    <string name="generic_error">Algo deu errado, tente novamente…</string>
    <string name="field_required_empty_error">Este campo não pode ser vazio.</string>

    <string name="welcome_text_formatter">Bem-vindo, %s</string>

    <string name="no_animals_found">Não encontramos animais</string>

    <string name="user_register_successful">Usuário cadastrado com sucesso</string>
    <string name="animal_update_successful">Dados atualizados com sucesso</string>
    <string name="animal_register_successful">Animal criado com sucesso</string>

    <string name="animal_empty_list">Não há animais cadastrados.</string>

    <string name="scanning_qr_code">Lendo QR Code</string>

    <string name="animal_data">Dados do animal:</string>
    <string name="owner_data">Dados do responsável:</string>

    <string name="start_occurrence">Informar aparecimento</string>

    <string name="not_found">Não encontrado</string>

    <string name="animal_name_formatter">Nome: %s</string>
    <string name="animal_breed_formatter">Raça: %s</string>
    <string name="animal_description_formatter">Descrição: %s</string>

    <string name="user_contact_formatter">Contato: %s</string>

    <string name="user_address_formatter">%s, %s</string>

    <string name="update_animal">Atualizar</string>


</resources>