<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/activity_user_registration_app_icon"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_user_registration_personal_data_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/activity_user_registration_personal_data_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_app_icon" />

        <!--        nome-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_name_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_name"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_personal_data_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_user_registration_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        email-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_email_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_email"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_name_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        telefone-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_phone_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_phone"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_email_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        senha-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_password_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_password"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_phone_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        confirm senha-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_password_confirmation_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_password_confirm"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_password_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--END FIRST SECTION-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_user_registration_address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/activity_user_registration_address_data_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_password_confirmation_til" />

        <!--        rua -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_street_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="4dp"
            android:hint="@string/user_address_street"
            app:layout_constraintEnd_toStartOf="@id/activity_user_registration_address_number_til"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_address_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        numero -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_number_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="@string/user_address_number"
            app:layout_constraintBottom_toBottomOf="@id/activity_user_registration_address_street_til"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/activity_user_registration_address_street_til"
            app:layout_constraintTop_toTopOf="@id/activity_user_registration_address_street_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        bairro -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_neighborhood_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_address_neighborhood"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_address_number_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        cidade -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_city_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="4dp"
            android:hint="@string/user_address_city"
            app:layout_constraintEnd_toStartOf="@id/activity_user_registration_address_state_til"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_address_neighborhood_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        uf-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_state_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="@string/user_address_state"
            app:layout_constraintBottom_toBottomOf="@id/activity_user_registration_address_city_til"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/activity_user_registration_address_city_til"
            app:layout_constraintTop_toTopOf="@id/activity_user_registration_address_city_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        pais-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_user_registration_address_country_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/user_address_country"
            app:layout_constraintEnd_toEndOf="@id/activity_user_registration_address_city_til"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_address_state_til">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_user_registration_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/activity_user_registration_register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/activity_user_registration_address_country_til" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
