<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/activity_login_app_icon"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/user_email"
        app:layout_constraintBottom_toTopOf="@id/activity_login_password_til"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/activity_login_app_icon"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_user_registration_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_login_password_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/user_password"
        app:layout_constraintBottom_toTopOf="@id/activity_login_login_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/activity_login_email_til">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_login_login_button"
        style="@style/WhiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/user_sign_in"
        app:layout_constraintBottom_toTopOf="@id/activity_login_forget_password_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/activity_login_password_til" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_login_forget_password_label"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:text="@string/user_forget_password"
        app:layout_constraintBottom_toTopOf="@id/activity_login_social_login_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/activity_login_login_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_login_social_login_label"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_big_margin"
        android:text="@string/user_social_login"
        app:layout_constraintBottom_toTopOf="@id/activity_login_twitter_image_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/activity_login_forget_password_label" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/activity_login_facebook_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_facebook_login"
        app:layout_constraintBottom_toBottomOf="@id/activity_login_twitter_image_button"
        app:layout_constraintEnd_toStartOf="@id/activity_login_twitter_image_button"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/activity_login_twitter_image_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/activity_login_twitter_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_twitter_login"
        app:layout_constraintBottom_toTopOf="@id/activity_login_register_button"
        app:layout_constraintEnd_toStartOf="@id/activity_login_google_image_button"
        app:layout_constraintStart_toEndOf="@id/activity_login_facebook_image_button"
        app:layout_constraintTop_toBottomOf="@id/activity_login_social_login_label" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/activity_login_google_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_google_login"
        app:layout_constraintBottom_toBottomOf="@id/activity_login_twitter_image_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/activity_login_twitter_image_button"
        app:layout_constraintTop_toBottomOf="@id/activity_login_social_login_label"
        app:layout_constraintTop_toTopOf="@id/activity_login_twitter_image_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_login_register_button"
        style="@style/TransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/user_register"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />

</androidx.constraintlayout.widget.ConstraintLayout>
